msc_root/msc_site/static/responsive.css
@charset "utf-8";
#header {
	border-style: none;
	width: 800px;
	height: auto;	
}
#wrapper {
	margin-top: 0px;
	margin-left: auto;
	margin-right: auto;
	background-color: #FFFFFF;
	width: 800px;	
}
body {
	width: 100%;
	background-image: url('TreeImage.jpg');
	background-position: center center;
	background-repeat: no-repeat;
	background-size: cover;
	background-attachment: fixed;
	background-attachment: fixed;
	background-color: aqua;
	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
	font-size: 0.9em;
	text-align: justify;
	color: #474747;
}
@media only screen and (max-width: 800px) {
	#header {
		width: 100%;
	}
	#wrapper {
		width: 100%;
	}
	body {
		background-image: none;	
		background-color: #E0E0E0;
	}
}
tt {
	font-size: 1.4em;
}
#footer {
	text-align: center;
	font-size: 0.8em;
	margin-top: 5px;
	padding-top: 10px;
	padding-bottom: 10px;
	background-color: #FFFFFF;
	border-top: thin solid #BBBBBB;
	clear: both;
	color: #969696;
}
#nav li {
	padding-top: 10px;
	padding-bottom: 10px;
	font-size: 1em;
	list-style-type: none;
	border-bottom: thin solid #5F5F5F;
	color: #4C4C4C;
	left: 0px;
	list-style-position: inside;
	margin-left: -10px;
}
#nav li a {
	text-decoration: none;
}
#leftsidebar {
	width: 20%;
	float: left;
}
#main {
	width: 80%;
	overflow: auto;
}
#logo {
	padding: 10px;
}

ul.errorlist {
	margin: 0;
	padding: 0;
}
errorlist li {
	border: 1px solid red;
	color: red;
	background: rgba(255, 0, 0, 0.15);
	list-style-position: inside;
	display: block;
	font-size: 1.2em;
	margin: 0 0 3px;
	padding: 4px 5px;
	text-align: center;
	border-radius: 3px;
}

input, textarea {
	width: 100%;
	padding: 5px!important;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	border-radius: 3px;
	border-style: solid;
	border-width: 1px;
	border-color: rgb(169,169,169);
}

input {
	height: 30px;
}
.success {
	background-color: rgba(0, 128, 0, 0.15);
	padding: 10px;
	text-align: center;
	color: green;
	border: 1px solid green;
	border-radius: 3px;
}

.required label:after {
	content: "*";
}

tr.odd_row td {
	background-color: beige;
	padding: 5px;
}

tr.even_row td {
	padding: 5px;
}

.boxed {
	margin: 0.5em;
	border-width: 3px;
	border-style: solid;
	border-color: black; 
	padding: 1em;
}

table.mpcreport {
	margin-top: 1em;
	border: 1px solid black;
	width: 100%;
}

table.mpcreport caption {
	text-align: left;
}

table.mpcreport thead th {
	text-align: center;
}

table.mpcreport td {
	border: 1px solid black;
	text-align: right;
}

table.mpcreport tfoot tr {
	background-color: grey;
	color: papayawhip;
}

